how fix problem with layout when scrollbar that is always on

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    scrollbar-gutter: stable;
 }
 
 body, html {
